# RayTracer

./: .gitignore  CMakeLists.txt  RayTracer.sln  Readme.md
Model/: CMakeLists.txt  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Model.vcxproj  Model.vcxproj.filters  ModelApi.h  packages.config
ModelTracer/: CMakeLists.txt  ModelTracer.vcxproj  main.cpp  packages.config
Primitives/: CMakeLists.txt  FacetTriangle.cpp  FacetTriangle.h  IObject.h  Image.h  Material.h  Primitives.vcxproj  Primitives.vcxproj.filters  PrimitivesApi.h  Ray.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h  Triangle.h  Vertex.cpp  Vertex.h
RayTracer/: CMakeLists.txt  FacetTriangle.cpp  FacetTriangle.h  IObject.h  IRayCaster.cpp  IRayCaster.h  Material.h  ModelRayCaster.cpp  ModelRayCaster.h  Ray.h  RayCast.cpp  RayCast.h  RayTracer.vcxproj  RayTracer.vcxproj.filters  RayTracerExport.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h  Utils.cpp  Utils.h  Vertex.h
Resources/: ModelTracer
SphereRayTracer/: CMakeLists.txt  SphereRayTracer.vcxproj  main.cpp  out.ppm
TriangleTracer/: CMakeLists.txt  TriangleTracer.vcxproj  main.cpp  packages.config
stb_image/: CMakeLists.txt  stb_image.cpp  stb_image.vcxproj  stb_image.vcxproj.filters
